--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -24,7 +24,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <com.app.carlfire.base.PowerfulRecyclerView
+    <com.app.commonlib.base.PowerfulRecyclerView
         android:id="@+id/photo_list_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
